--- a/ScrumApplication.Web/Views/Project/Edit.cshtml
+++ b/ScrumApplication.Web/Views/Project/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@using ScrumApplication.DAL.Repositories
-@model ScrumApplication.Entity.Models.Project
+@model ScrumApplication.Entity.Models.ProjectEditViewModel
 
 @{
     ViewBag.Title = "Edit";
@@ -13,56 +13,82 @@
     
 <div class="form-horizontal">
     <h4>Project</h4>
-
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    @Html.HiddenFor(model => model.ProjectId)
-    @Html.HiddenFor(model => model.TeamId)
-    <div class="form-group">
-        @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+    @Html.HiddenFor(model => model.Project.ProjectId)
+    @Html.HiddenFor(model => model.Project.TeamId)
+    <div class="row">
+        <div class="col-md-6 col-sm-10">
+            <div class="form-group">
+                @Html.LabelFor(model => model.Project.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Project.Name, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Project.Name, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Project.Description, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Project.Description, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Project.Description, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Project.DayCount, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Project.DayCount, new { htmlAttributes = new { @class = "form-control" }, placeholder = "How long project take" })
+                    @Html.ValidationMessageFor(model => model.Project.DayCount, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                Sprint Time(Day)
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Project.DefaultSprintTime, new { htmlAttributes = new { @class = "form-control" }, placeholder = "Default sprint days" })
+                    @Html.ValidationMessageFor(model => model.Project.DefaultSprintTime, "", new { @class = "text-danger" })
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
+        <div class="col-md-6 col-sm-10">
+            <div class="form-group">
+                <div class="col-md-10">Select Team</div>
+                <div class="col-md-10">
+                    @Html.DropDownListFor(x => Model.Project.TeamId, new SelectList(Model.UserTeams, "TeamId", "Name"),
+                               htmlAttributes: new { @class = "form-control", id = "BacklogStatus" })
+                    @Html.ValidationMessageFor(model => model.Project.TeamId, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div>
+                <div class="col-md-6 col-sm-10">
+                    <div class="col-md-10" style="margin:auto;">
+                        
+                        <div style="margin-top:10px;">
+                            OR <a href="@Url.Action("Create", "Team", new { projectId = Model.Project.ProjectId })" class="btn btn-success" style="margin-left: 20px;">Create Team</a>
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
         </div>
     </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.DayCount, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.DayCount, new { htmlAttributes = new { @class = "form-control" }, placeholder = "How long project take" })
-            @Html.ValidationMessageFor(model => model.DayCount, "", new { @class = "text-danger" })
-        </div>
-    </div>
+    
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.DefaultSprintTime, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.DefaultSprintTime, new { htmlAttributes = new { @class = "form-control" }, placeholder = "Default sprint days" })
-            @Html.ValidationMessageFor(model => model.DefaultSprintTime, "", new { @class = "text-danger" })
-        </div>
-    </div>
+   
 
-
-    @if (TeamRepository.IsProjectManager(Model.ProjectId))
+    @if (TeamRepository.IsProjectManager(Model.Project.ProjectId))
     {
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-primary" />
-                @if (!Model.IsDone)
+                @if (!Model.Project.IsDone)
                 {
-                    <a href="@Url.Action("Complete", "Project", new { id = Model.ProjectId })" class="btn btn-success">Mark as Completed</a>
+                    <a href="@Url.Action("Complete", "Project", new { id = Model.Project.ProjectId })" class="btn btn-success">Mark as Completed</a>
                 }
                 else
                 {
-                    <a href="@Url.Action("Green", "Project", new { id = Model.ProjectId })" class="btn btn-success">Mark as Uncompleted</a>
+                    <a href="@Url.Action("Green", "Project", new { id = Model.Project.ProjectId })" class="btn btn-success">Mark as Uncompleted</a>
                 }
-
             </div>
         </div>
 
@@ -71,5 +97,5 @@
 }
 
     <div>
-        <a href="@Url.Action("BackToList", "Project", new { id = Model.TeamId })" class="btn btn-primary">Back To List</a>
+        <a href="@Url.Action("BackToList", "Project", new { id = Model.Project.TeamId })" class="btn btn-primary">Back To List</a>
     </div>
