--- a/ScrumApplication.Web/Views/Team/Create.cshtml
+++ b/ScrumApplication.Web/Views/Team/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model ScrumApplication.Entity.Models.Team
+﻿@model ScrumApplication.Entity.Models.TeamCreateViewModel
 
 @{
     ViewBag.Title = "Create";
@@ -9,17 +9,17 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-
+    @Html.HiddenFor(x=>x.ProjectId)
     <div>
         <div class="form-horizontal .col-sm-8 ">
             <h4>Team</h4>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group ">
-                @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.Team.Name, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.Team.Name, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Team.Name, "", new { @class = "text-danger" })
                 </div>
             </div>
 
@@ -33,5 +33,5 @@
 }
 
     <div>
-        <a href="@Url.Action("BackToList", "Team", new { id = Model.TeamId })" class="btn btn-default">Back To List</a>
+        <a href="@Url.Action("BackToList", "Team", new { id = Model.Team.TeamId })" class="btn btn-default">Back To List</a>
     </div>
